Till My Resume Section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </section>
       <!-- What i do Section -->
       <section class="what-i-do">
-        <h2>What I do</h2>
+        <h2 class="section-title">What I do</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem libero
           soluta magni deserunt ullam dolorum totam voluptatibus amet odio a
@@ -90,49 +90,129 @@
           optio, rem laudantium totam labore, in velit ut? Ut, quaerat!
         </p>
         <div class="skill-container">
-        <div class="skill-box">
-          <div class="skill">
-            <img src="./images/icons/js.png" alt="" />
-            <h3>Vanila JavaScript</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-              molestiae. Dolore id unde at. Veritatis.
-            </p>
+          <div class="skill-box">
+            <div class="skill">
+              <img src="./images/icons/js.png" alt="" />
+              <h3>Vanila JavaScript</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Tenetur, molestiae. Dolore id unde at. Veritatis. Lorem ipsum
+                dolor sit amet consectetur adipisicing elit. Tenetur, molestiae.
+                Dolore id unde at. Veritatis.
+              </p>
+            </div>
+          </div>
+          <div class="skill-box">
+            <div class="skill">
+              <img src="./images/icons/react.png" alt="" />
+              <h3>React</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Tenetur, molestiae. Dolore id unde at. Veritatis. Lorem ipsum
+                dolor sit amet consectetur adipisicing elit. Tenetur, molestiae.
+                Dolore id unde at. Veritatis.
+              </p>
+            </div>
+          </div>
+          <div class="skill-box">
+            <div class="skill">
+              <img src="./images/icons/nodejs.png" alt="" />
+              <h3>Node.js</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Tenetur, molestiae. Dolore id unde at. Veritatis. Lorem ipsum
+                dolor sit amet consectetur adipisicing elit. Tenetur, molestiae.
+                Dolore id unde at. Veritatis.
+              </p>
+            </div>
+          </div>
+          <div class="skill-box">
+            <div class="skill">
+              <img src="./images/icons/mongo.png" alt="" />
+              <h3>MongoDB</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Tenetur, molestiae. Dolore id unde at. Veritatis. Lorem ipsum
+                dolor sit amet consectetur adipisicing elit. Tenetur, molestiae.
+                Dolore id unde at. Veritatis.
+              </p>
+            </div>
           </div>
         </div>
-        <div class="skill-box">
-          <div class="skill">
-            <img src="./images/icons/js.png" alt="" />
-            <h3>Vanila JavaScript</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-              molestiae. Dolore id unde at. Veritatis.
-            </p>
-          </div>
-        </div>
-        <div class="skill-box">
-          <div class="skill">
-            <img src="./images/icons/js.png" alt="" />
-            <h3>Vanila JavaScript</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-              molestiae. Dolore id unde at. Veritatis.
-            </p>
-          </div>
-        </div>
-        <div class="skill-box">
-          <div class="skill">
-            <img src="./images/icons/js.png" alt="" />
-            <h3>Vanila JavaScript</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-              molestiae. Dolore id unde at. Veritatis.
-            </p>
-          </div>
-        </div>
-      </div>
       </section>
-      <section></section>
+      <section class="my-resume">
+        <h2 class="section-title">A Summary of My Resume</h2>
+        <div class="resume-box">
+          <!-- Education -->
+          <div class="edu-work">
+            <h3>My Education</h3>
+            <div class="unit">
+              <h4 class="dept">Master in Computer Engineering</h4>
+              <h5 class="institute">Harvard University/2015-2017</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Voluptate, incidunt minus. Obcaecati voluptas praesentium
+                tempora quos temporibus aperiam minima ducimus?
+              </p>
+              <hr />
+            </div>
+            <div class="unit">
+              <h4 class="dept">Master in Computer Engineering</h4>
+              <h5 class="institute">Harvard University/2015-2017</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Voluptate, incidunt minus. Obcaecati voluptas praesentium
+                tempora quos temporibus aperiam minima ducimus?
+              </p>
+              <hr />
+            </div>
+            <div class="unit">
+              <h4 class="dept">Master in Computer Engineering</h4>
+              <h5 class="institute">Harvard University/2015-2017</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Voluptate, incidunt minus. Obcaecati voluptas praesentium
+                tempora quos temporibus aperiam minima ducimus?
+              </p>
+            </div>
+          </div>
+          <!-- Experience -->
+          <div class="edu-work">
+            <h3>My Education</h3>
+            <div class="unit">
+              <h4 class="dept">Master in Computer Engineering</h4>
+              <h5 class="institute">Harvard University/2015-2017</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Voluptate, incidunt minus. Obcaecati voluptas praesentium
+                tempora quos temporibus aperiam minima ducimus?
+              </p>
+              <hr />
+            </div>
+            <div class="unit">
+              <h4 class="dept">Master in Computer Engineering</h4>
+              <h5 class="institute">Harvard University/2015-2017</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Voluptate, incidunt minus. Obcaecati voluptas praesentium
+                tempora quos temporibus aperiam minima ducimus?
+              </p>
+              <hr />
+            </div>
+            <div class="unit">
+              <h4 class="dept">Master in Computer Engineering</h4>
+              <h5 class="institute">Harvard University/2015-2017</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Voluptate, incidunt minus. Obcaecati voluptas praesentium
+                tempora quos temporibus aperiam minima ducimus?
+              </p>
+            </div>
+          </div>
+        </div>
+        <button class="btn-primary">Download CV</button>
+      </section>
+
       <section></section>
     </main>
     <footer></footer>
